--- a/src/main/resources/assets/fakeores/lang/en_US.lang
+++ b/src/main/resources/assets/fakeores/lang/en_US.lang
@@ -10,7 +10,16 @@ item.boss_fragment_4.name=Boss Fragment 4
 item.boss_spawner.name=Ores Boss Spawner
 
 #Blocks
-
+tile.antiOreStone.name=Anti Ores Stone
 
 #Entities
 entity.DiamondOre.name=Fake Diamond Ore
+entity.CoalOre.name=Fake Coal Ore
+entity.EmeraldOre.name=Fake Emerald Ore
+entity.GoldOre.name=Fake Gold Ore
+entity.IronOre.name=Fake Iron Ore
+entity.LapisOre.name=Fake Lapis Ore
+entity.NetherQuartzOre.name=Fake Quartz Ore
+entity.RedstoneOre.name=Fake Redstone Ore
+
+entity.OresBoss.name=Ores Boss
