Fixd some shit in the lang file

--- a/src/main/resources/assets/fakeores/lang/en_US.lang
+++ b/src/main/resources/assets/fakeores/lang/en_US.lang
@@ -2,7 +2,7 @@
 itemGroup.fakeOresTab=Fake Ores Tab
 
 #Items
-item.antiOresBlade.name=Anti Ores Blade
+item.antiOresBlade.name=Anti Ore Blade
 item.boss_fragment_1.name=Boss Fragment 1
 item.boss_fragment_2.name=Boss Fragment 2
 item.boss_fragment_3.name=Boss Fragment 3
