Updated to 1.8.9 + added a new achievement

--- a/src/main/resources/assets/fakeores/lang/en_US.lang
+++ b/src/main/resources/assets/fakeores/lang/en_US.lang
@@ -30,3 +30,6 @@ achievement.broken_Cup.desc=Break a cup !
 
 achievement.boss_defeated=Boss Defeated !
 achievement.boss_defeated.desc=Kill the Ore Boss !
+
+achievement.killFakeOreWithAntiOreBlade=M-M-MONSTER KILL !
+achievement.killFakeOreWithAntiOreBlade.desc=First kill with Anti Ore Blade on a Fake Ore
