--- a/src/main/resources/assets/fakeores/lang/fr_FR.lang
+++ b/src/main/resources/assets/fakeores/lang/fr_FR.lang
@@ -8,6 +8,8 @@ item.boss_fragment_2.name=Fragment du Boss 2
 item.boss_fragment_3.name=Fragment du Boss 3
 item.boss_fragment_4.name=Fragment du Boss 4
 item.boss_spawner.name=Spawner de l'Ores Boss
+item.totem.name=Totem
+item.red_gem.name=Gemme Rouge
 
 #Blocks
 tile.antiOreStone.name=Pierre anti-minerai
